Bug 4946 - Wrong check in nscd's handle_request()
Summary: Wrong check in nscd's handle_request()
Status: RESOLVED FIXED
Alias: None
Product: glibc
Classification: Unclassified
Component: nscd (show other bugs)
Version: unspecified
: P2 normal
Target Milestone: ---
Assignee: Ulrich Drepper
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-08-21 21:07 UTC by Petr Baudis
Modified: 2014-07-04 16:02 UTC (History)
1 user (show)

See Also:
Host:
Target:
Build:
Last reconfirmed:
fweimer: security-


Attachments
Proposed fix (361 bytes, patch)
2007-08-21 21:08 UTC, Petr Baudis
Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Petr Baudis 2007-08-21 21:07:43 UTC
handle_request()'s check for sendfileall() is wrong. db->mmap_used must be
always true, otherwise  assert (db->wr_fd != -1)  fails. And even if
cached->notfound, why not use sendfileall()?
Comment 1 Petr Baudis 2007-08-21 21:08:18 UTC
Created attachment 1973 [details]
Proposed fix
Comment 2 Ulrich Drepper 2007-08-22 03:40:48 UTC
Applied.  With a different ChangeLog message, though.